# heart-disease-predictor

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
docs/: BACKLOG.md  PROJECT_PLAN.md  decisions.md  demo_path.md  results_snapshot.md
models/: baseline_logreg.joblib
reports/: .gitignore  baseline_metrics.md  model_card.md
scripts/: check_data.py  download_uci_heart_disease.py
src/mlproj/data/: make_dataset.py  split.py
src/mlproj/evaluation/: compare_models.py  compare_models_3.py  eval_predictions.py  pick_best_threshold.py  pr_curve.py  sweep_thresholds.py  write_final_report.py  write_val_tuning_report.py
src/mlproj/inference/: predict_baseline.py  predict_hgb.py  predict_rf.py
src/mlproj/models/: train_baseline.py  train_hgb.py  train_rf.py
tests/: test_compare_models.py  test_compare_models_3.py  test_data_pipeline.py  test_final_report.py  test_inference.py  test_inference_cli.py  test_pick_best_threshold.py  test_pr_curve.py  test_predict_rf.py  test_threshold_sweep.py  test_train_rf_metrics.py  test_val_tuning_report.py
